@@ -37,7 +37,6 @@
 #if 0
 #include <stdlib.h>
 #endif
-#include "ansidecl.h"
 
 #ifndef ULONG_MAX
 #define	ULONG_MAX	((unsigned long)(~0L))		/* 0xFFFFFFFF */
@@ -51,11 +50,11 @@
  */
 unsigned long
 strtoul(nptr, endptr, base)
-	CONST char *nptr;
+	const char *nptr;
 	char **endptr;
 	register int base;
 {
-	register CONST char *s = nptr;
+	register const char *s = nptr;
 	register unsigned long acc;
 	register int c;
 	register unsigned long cutoff;
