@@ -1,3 +1,8 @@
+1998-07-17  Martin Baulig  <martin@home-of-linux.org>
+
+	* strtol.c, strtoul.c (<ansidecl.h>): Removed. Using
+	`const' instead of `CONST'.
+
 1998-07-15  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnomesupport.awk (gethostname): Emit declaration.
